--- a/sass/mia-font.scss
+++ b/sass/mia-font.scss
@@ -56,3 +56,59 @@
        url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-BlackItalic.woff') format('woff'), /* Pretty Modern Browsers */
        url('https://mia-grotesk.s3.amazonaws.com/MiaGrotesk-BlackItalic.svg#svgMiaGrotesk-Regular') format('svg'); /* Legacy iOS */
 }
+
+@font-face {
+  font-family: 'iconi_mia';
+  src: url('../fonts/iconi_mia.eot');
+  src: url('../fonts/iconi_mia.eot#iefix') format('embedded-opentype'),
+       url('../fonts/iconi_mia.woff') format('woff'),
+       url('../fonts/iconi_mia.svg#iconi_mia') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "iconi_mia";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .3em;
+  text-align: center;
+  /* opacity: .8; */
+
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-miavimeo:before { content: '\e800'; } /* '' */
+.icon-miaflickr:before { content: '\e801'; } /* '' */
+.icon-miafacebook:before { content: '\e802'; } /* '' */
+.icon-miainstagram:before { content: '\e803'; } /* '' */
+.icon-miasearch:before { content: '\e804'; } /* '' */
+.icon-miatumblr:before { content: '\e805'; } /* '' */
+.icon-miatwitter:before { content: '\e806'; } /* '' */
+.icon-miayoutube:before { content: '\e807'; } /* '' */
+.icon-miaprint:before { content: '\e808'; } /* '' */
+.icon-miacontact:before { content: '\e809'; } /* '' */
