let affinity group text wrap around image

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -630,14 +630,13 @@ a.departmentLink h2{
     width: 100%;
   }
 }
-.curator-intro, .affinity-intro {
+.curator-intro {
   width: 64%;
   display: inline-block;
-  margin-left: .5em;
 }
 .affinity-intro  p{
-    margin-bottom: 15px;
-  }
+  margin-bottom: 15px;
+}
 .curatorBio h4 {
   font-size: 1.1em;
 }
