--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1000,7 +1000,7 @@ hr{margin:0;}
 .decorator-wrap>.decorator{
     color:#fff;
     text-align:left;
-    max-width:50%;
+    max-width:35em;
     margin:0;
     display: -webkit-flex;
     display:flex;
@@ -1040,7 +1040,13 @@ hr{margin:0;}
 .d-gallery{}
 .d-department{}
 
-.d-gallery img{max-width:150px;height:auto;margin-right:1rem;align-self: flex-start;}
+.d-gallery img {
+  max-width:150px;
+  max-height:150px;
+  height:auto;
+  margin-right:1rem;
+  align-self: flex-start;
+}
 .d-gallery h3{line-height:1.3em;margin-top:1rem;}
 .decorator-wrap>.d-department>.departmentContent{margin-left:0;padding-left:0;width:100%;align-self: flex-start;}
 .decorator-wrap>.d-department>.departmentContent p{padding-left:0;}
