space for the header on small screen object pages
Carve out a bar at the top of the object page so the fixed header
shows, then hides behind the zoomable image, then shows again after the
image is scrolled.

I did this because on small screens the fixed header detracts heavily
from the image. So hide it behind. The one trick is that we need to bump
up the `z-index` on the navigation when it opens up, or it gets stuck
behind the image.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -724,8 +724,18 @@ a.departmentLink h2{
 .artwork .info p{
   width:100%;
 }
-.artwork.smallviewport .info {
-  width: 100%;
+.artwork.smallviewport {
+  .info {
+    width: 100%;
+    padding-top: 1em;
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    height: 3.5em;
+    background-color: #232323;
+  }
 }
 .artwork .objects-focus {
   border-top: none;
