search box placeholder changed to search. New to Mia added to homepage. affinity group information removed. each department page has link to affinity group information page.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -664,7 +664,7 @@ a.departmentLink h2{
   font-size: .9em;
   padding-bottom: 1em;
 }
-.affinity-intro .button {
+.departmentBlurb .button {
   float: right;
   padding: 5px 15px;
   background: $primary;
