hover style on curator link

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -697,6 +697,9 @@ a.departmentLink h2{
 #curators a {
   color: $primary;
 }
+#curators a:hover {
+  opacity:.7;
+}
 .curatorProfile.pageText {
   margin-top: 4em;
 }
