fix flashing/disappearing sticky elements

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -282,6 +282,7 @@ header{
     position:relative;
     width: 100%;
     margin: 0;
+    transform: translate3d(0px,0px,0px);
 }
 
     .objects-focus h1{
