specify white text only for inside peeks
 fix white text on a white background when rendered without JS

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1034,7 +1034,7 @@ hr{margin:0;}
   font-family:$MiaGroteskLight;
 }
 
-.peek a{
+.peek.open .peek a{
     padding:0 0 10px 10px;
     display:inline-block;
     margin-top:10px;
