--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1325,6 +1325,7 @@ button  {
 
 .invalid{
     background:url(../images/no-image-bg.png) repeat top left;
+    background-color: white;
     flex-grow:1;
     min-height:6.25rem;
     -webkit-transition: all 0.5s ease;
