initial tranistion stuff

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @media print {
   @import "print.scss";
 }
+@import "transitions.scss";
 
 $MiaGroteskBold: 'MiaGrotesk-Bold', sans-serif;
 $MiaGroteskBoldItalic: 'MiaGrotesk-BoldItalic', sans-serif;
