--- a/sass/transitions.scss
+++ b/sass/transitions.scss
@@ -35,3 +35,12 @@ $closeduration: 0.5s;
         min-height:0px;
     }
 }
+
+.navbar-appear {
+  opacity: 0.01;
+  transition: all 500ms ease-in;
+
+  &.navbar-appear-active {
+    opacity: 1;
+  }
+}
