--- a/sass/main.scss
+++ b/sass/main.scss
@@ -134,11 +134,11 @@ header{
     padding:1em 0 0 0;
     height:auto;
     overflow: hidden;
-    -webkit-transition: height 0.3s ease-in;
-    -moz-transition: height 0.3s ease-in;
-    -o-transition: height 0.3s ease-in;
-    -ms-transition: height 0.3s ease-in;
-    transition: height 0.3s ease-in;
+    -webkit-transition: all 0.3s ease-in;
+    -moz-transition: all 0.3s ease-in;
+    -o-transition: all 0.3s ease-in;
+    -ms-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in;
     position: relative;
 }
 
@@ -155,7 +155,7 @@ header{
   width: 100%;
   position: relative;
   float: left;
-  margin: 10px 0;
+  /*margin: 10px 0;*/
   display: inline-block;
   background: rgba(35,35,35,.3);
   min-height: 39px;
