--- a/sass/main.scss
+++ b/sass/main.scss
@@ -605,11 +605,11 @@ header{
   background-size: cover;
 }
 a.departmentLink h2{
-  -webkit-transition: all 150ms linear;
-  -moz-transition: all 150ms linear;
-  -ms-transition: all 150ms linear;
-  -o-transition: all 150ms linear;
-  transition: all 150ms linear;
+  -webkit-transition: all 150ms ease-in;
+  -moz-transition: all 150ms ease-in;
+  -ms-transition: all 150ms ease-in;
+  -o-transition: all 150ms ease-in;
+  transition: all 150ms ease-in;
 }
 
 /* ===== DEPARTMENT PAGES ===== */
