--- a/sass/main.scss
+++ b/sass/main.scss
@@ -340,6 +340,8 @@ header{
     }
 
 
+
+
 .search-wrap {
   z-index: 4;
 }
@@ -1192,6 +1194,9 @@ hr{margin:0;}
   position: relative;
   top: 3.3em;
   background: $primary;
+  -webkit-box-shadow: 0px 6px 18px -4px rgba(35,35,35,.75);
+  -moz-box-shadow: 0px 6px 18px -4px rgba(35,35,35,.75); 
+  box-shadow: 0px 6px 18px -4px rgba(35,35,35,.75);
 }
 ul.nav_list li {
   display: inline-block;
