--- a/sass/main.scss
+++ b/sass/main.scss
@@ -99,8 +99,16 @@ header{
   z-index: 1500;
   -webkit-box-shadow: 0px 6px 18px -4px rgba(35,35,35,.75);
   -moz-box-shadow: 0px 6px 18px -4px rgba(35,35,35,.75); 
-  box-shadow: 0px 6px 18px -4px rgba(35,35,35,.75);
-  
+  box-shadow: 0px 6px 18px -4px rgba(35,35,35,.75); 
+}
+.global_buttons_open {
+  background: $primary;
+  width: 5em;
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: .7em 0;
+  z-index: 1500;  
 }
 .global_display {
   width: 100%;
